Inculded Saturday to the days of the week

--- a/website/Templates/base.html
+++ b/website/Templates/base.html
@@ -341,6 +341,9 @@
                                     <option value="Friday">
                                     Friday
                                     </option>
+									 <option value="Saturday">
+                                    Saturday
+                                    </option>
                                 </select>
 							</div>
 							<div class="col-12">
